Hack to fix session/show page order on mobile
Whole approach to layout in this app could use a refresh!
This is good enough for now.

--- a/src/app/assets/stylesheets/grid.css.scss
+++ b/src/app/assets/stylesheets/grid.css.scss
@@ -14,7 +14,6 @@
 .grid_10 { width: 63.5em; }
 
 .column {
-	margin: 0 5px;
 	overflow: hidden;
 	float: left;
 	display: inline;
@@ -25,7 +24,6 @@
 	overflow: hidden;
 }
 .row .row {
-	margin: 0 -5px;
 	width: auto;
 	display: inline-block;
 }
